--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "gsap": "^3.12.2",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
+    "react-fast-marquee": "^1.6.1",
+    "react-gsap-marquee": "^0.0.5",
+    "react-icons": "^4.11.0",
     "styled-components": "^6.0.8"
   },
   "devDependencies": {
