--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-fast-marquee": "^1.6.1",
     "react-gsap-marquee": "^0.0.5",
     "react-icons": "^4.11.0",
-    "styled-components": "^6.0.8"
+    "styled-components": "^6.0.8",
+    "swiper": "^10.3.1"
   },
   "devDependencies": {
     "@types/node": "latest",
