--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "gsap": "^3.12.2",
+    "hover-effect": "^1.2.1",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
