--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "framer-motion": "^10.16.4",
     "gsap": "^3.12.2",
     "hover-effect": "^1.2.1",
     "next": "latest",
