--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gsap": "^3.12.2",
     "hover-effect": "^1.2.1",
     "next": "latest",
+    "next-sanity": "^5.5.5",
     "react": "latest",
     "react-dom": "latest",
     "react-fast-marquee": "^1.6.1",
