--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^10.16.4",
     "gsap": "^3.12.2",
     "hover-effect": "^1.2.1",
+    "moment": "^2.29.4",
     "next": "latest",
     "next-sanity": "^5.5.5",
     "react": "latest",
@@ -21,6 +22,7 @@
     "react-fast-marquee": "^1.6.1",
     "react-gsap-marquee": "^0.0.5",
     "react-icons": "^4.11.0",
+    "react-moment": "^1.1.3",
     "styled-components": "^6.0.8",
     "swiper": "^10.3.1"
   },
