--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@portabletext/react": "^3.0.9",
     "@sanity/image-url": "^1.0.2",
     "framer-motion": "^10.16.4",
     "gsap": "^3.12.2",
