--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-gsap-marquee": "^0.0.5",
     "react-icons": "^4.11.0",
     "react-moment": "^1.1.3",
+    "resend": "^1.1.0",
     "styled-components": "^6.0.8",
     "swiper": "^10.3.1"
   },
