--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^10.16.4",
     "gsap": "^3.12.2",
     "hover-effect": "^1.2.1",
+    "lottie-react": "^2.4.0",
     "moment": "^2.29.4",
     "next": "latest",
     "next-sanity": "^5.5.5",
